--- a/config/config.json
+++ b/config/config.json
@@ -2,8 +2,9 @@
     "width": 600,
     "height": 400,
     "point_size": 5,
-    "num_points": 5,
-    "radius": 40,
+    "num_points": 10,
+    "radius": 50,
+    "perception_radius": 100,
     "colors": {
         "BLACK": [
             0,
@@ -37,36 +38,102 @@
     },
     "agent2": {
         "name": "Agent2",
-        "instructions": "For each coordinate in {coordinates}, increase the x-coordinate by a random amount between 15 and 100, and the y-coordinate by a random amount between 30 and 100. Make sure no two coordinates in {coordinates} have the same random increment. Return the updated coordinates in the same format as the input, with no additional text."
+        "instructions": "For each velocity in {velocities}, calculate the average velocity of all nearby points within a radius of {perception_radius}. Adjust the velocity of each point to align with this average velocity. Return the updated velocities in the same format as the input, with no additional text."
     },
     "agent3": {
         "name": "Agent3",
-        "instructions": "Update only the y values in {coordinates} that are greater than 300 by setting them to 0, and update only the x values in {coordinates} that are greater than 500 by setting them to 0. Return the result in the same format as {coordinates}, with no extra text and keeping the same number of coordinate pairs as in the input."
+        "instructions": "For each coordinate in {coordinates}, calculate the average coordinate of all nearby points within a radius of {perception_radius}. Adjust each coordinate to move slightly toward this average coordinate. Return the updated coordinates in the same format as the input, with no additional text."
     },
     "agent4": {
         "name": "Agent4",
-        "instructions": "For each coordinate in {coordinates}, check if any other coordinate is within a radius of {radius}. If the distance between two points is smaller than the radius, adjust the x-coordinate of the first point by moving it -50 units.  Return the updated coordinates in the same format as the input, with no additional text."
+        "instructions": "For each coordinate in {coordinates}, check if it is within a radius of {radius} of any other coordinate. If the distance between any two points is smaller than the radius, adjust the position of the first coordinate to move away from the second coordinate to maintain separation. The second coordinate should remain unchanged during this check. Once a coordinate has been adjusted, it should not be checked again when processing subsequent coordinates. Additionally, ensure that no two points have the same final coordinates. If the final position of one coordinate overlaps with another, adjust the position of the first coordinate to ensure uniqueness, while the second coordinate remains unchanged. Each coordinate should be checked against all others to ensure proper separation and uniqueness. Return the updated coordinates in the same format as the input, with no additional text."
+    },
+    "agent5": {
+        "name": "Agent5",
+        "instructions": "For each coordinate in {coordinates}, update its position by adding the corresponding velocity from {velocities}. If the updated position moves out of bounds (0 to {width} for x, and 0 to {height} for y), randomly snap the coordinate to one of the four edges: (0, 0), ({width}, 0), (0, {height}), or ({width}, {height}). Return the updated coordinates in the same format as the input, with no additional text."
     },
     "coordinates": [
         [
-            45,
-            134
+            120.0,
+            350.0
         ],
         [
-            289,
-            178
+            250.0,
+            150.0
         ],
         [
-            512,
-            367
+            360.0,
+            200.0
         ],
         [
-            333,
-            88
+            470.0,
+            390.0
         ],
         [
-            597,
-            209
+            520.0,
+            180.0
+        ],
+        [
+            330.0,
+            50.0
+        ],
+        [
+            290.0,
+            120.0
+        ],
+        [
+            75.0,
+            275.0
+        ],
+        [
+            590.0,
+            80.0
+        ],
+        [
+            430.0,
+            300.0
+        ]
+    ],
+    "velocities": [
+        [
+            -3.0997222469992645,
+            -3.575792890800518
+        ],
+        [
+            -1.1667877252706051,
+            -3.558547277380509
+        ],
+        [
+            -3.0997222469992645,
+            -3.575792890800518
+        ],
+        [
+            0.4659407109289482,
+            -3.4282221013198106
+        ],
+        [
+            -3.8393566362341693,
+            -3.5864070268428145
+        ],
+        [
+            0.4659407109289482,
+            -3.4282221013198106
+        ],
+        [
+            -3.8497445001560346,
+            -3.5864070268428145
+        ],
+        [
+            -3.8497445001560346,
+            -3.5864070268428145
+        ],
+        [
+            -3.8497445001560346,
+            -3.5864070268428145
+        ],
+        [
+            -3.8497445001560346,
+            -3.5864070268428145
         ]
     ]
 }
